domain/src/main/java/com/example/clean_architecture/domain/core/error/Failure.kt
package com.example.clean_architecture.domain.core.error

sealed interface Failure